# starting-ragchatbot-codebase

./: .flake8  .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml  query-flow-diagram.md
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/tests/: conftest.py  test_api.py  test_app.py  test_static_files.py
chroma_db/: chroma.sqlite3
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh  switch-claude.sh
